--- a/gh-pages/app/common/chart/chart-date-range/chart-date-range.less
+++ b/gh-pages/app/common/chart/chart-date-range/chart-date-range.less
@@ -44,7 +44,6 @@
             }
             > .datetime-container {
                 position: relative;
-                height: 355px;
                 > .timepicker,
                 > .datepicker {
                     border: 0;
@@ -54,12 +53,8 @@
                     .box-shadow(0 0 0) !important;
                     padding: 0;
                     margin: 0;
-                    button {
-                        border: 0 !important;
-                    }
                 }
                 > .datepicker {
-                    height: 265px;
                     max-width: inherit !important;
                     margin-top: 5px;
                 }
